--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,54 @@
-# Compiled class file
-*.class
+node_modules
 
-# Log file
-*.log
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+/src/main/resources/application.properties
 
-# BlueJ files
-*.ctxt
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+### VS Code ###
+.vscode/
+src/main/resources/application.properties
+src/main/resources/*.yml
+
+
+/src/main/resources/application-test.properties
+/src/main/resources/application-local.properties
+/src/main/resources/application.properties
+/src/main/resources/application-dev.properties
+/src/main/resources/application-prod.properties
+/src/main/resources/*.properties
+
+/src/main/resources/application-test.yml
+/src/main/resources/application-local.yml
+/src/main/resources/application.properties
+/src/main/resources/application-dev.yml
+/src/main/resources/application-prod.yml
+/src/main/resources/*.yml
+*.yml
